# vehicle_dashboard

./: README.md  cache.txt  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/profile/: AndroidManifest.xml
assets/explanations/: drive.html  fuel.html  record.html
assets/helps/: drive.html
ffi_native_components/: .gitignore
grpc_server/: .gitignore  CMakeLists.txt  client.cpp  server.cpp  vehicle_client.cpp  vehicle_server.cpp
grpc_server/experiment/: ping_client.cpp.cache  ping_server.cpp.cache
grpc_server/experiment/protos_generated/: ping.pb.h
grpc_server/lib/: data_exchanger_service.cpp  data_exchanger_service.h  engine.cpp  engine.h  fuel_storage.cpp  fuel_storage.h
grpc_server/protos/: vehicle.proto
grpc_server/protos_generated/: ping.grpc.pb.cc  ping.grpc.pb.h  ping.pb.cc  vehicle.grpc.pb.cc  vehicle.grpc.pb.h  vehicle.pb.cc  vehicle.pb.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_drawer.dart  config.dart  constants.dart  grpc_client.dart  main.dart  my_app.dart
lib/db/: db_client.dart  db_client.g.dart  tables.drift
lib/pages/: explanation_route.dart  home_page.dart  home_route.dart
lib/pages/explanation_route/: drive_explanation_window.dart  fuel_explanation_window.dart  record_explanation_window.dart
lib/pages/home_page/: dashboard_window.dart  fuel_window.dart  records_window.dart
lib/pages/home_route/: drive_window.dart
lib/protos_generated/: ping.pb.dart  ping.pbgrpc.dart  ping.pbjson.dart  vehicle.pb.dart  vehicle.pbenum.dart  vehicle.pbgrpc.dart  vehicle.pbjson.dart
lib/routes/: explanation_route.dart  home_route.dart  record_editing_route.dart
lib/routes/explanation_route/: drive_explanation_window.dart  fuel_explanation_window.dart  record_explanation_window.dart
lib/routes/home_route/: drive_window.dart  fuel_window.dart  records_window.dart
lib/utilities/: ffi_api.dart
lib/utilities/grpc_clients/: NumberDataReceiver.dart  ping_client.dart  vehicle_client.dart
lib/widgets/home_page/dashboard_window/: drive_panel.dart  fuel_indicator.dart  rpm_indicator.dart  speed_indicator.dart  temperature_indicator.dart
lib/widgets/home_page/dashboard_window/drive_panel/: drive_panel.dart
lib/widgets/home_page/dashboard_window/indicator_panel/: fuel_indicator.dart  rpm_indicator.dart  speed_indicator.dart
lib/widgets/home_page/drive_panel/: drive_button_sign.dart  drive_panel.dart
lib/widgets/home_page/drive_window/control_panel/: control_panel.dart
lib/widgets/home_page/fuel_window/: count_box.dart  fuel_display_card.dart
lib/widgets/home_route/fuel_window/: count_box.dart  fuel_display_card.dart
lib/widgets/record_editing_route/: date_time_form_field.dart  number_form_fields.dart  record_editing_button.dart  speed_action_form_field.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
protos/: ping.proto  vehicle.proto
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+7 files in other folders)
